test/cli/test/__snapshots__/list.test.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic output shows error 1`] = `
"Error: describe error
 ❯ describe-error.test.ts:4:9
      2| 
      3| describe('describe error', () => {
      4|   throw new Error('describe error')
       |         ^
      5| 
      6|   it('wont run', () => {

Error: top level error
 ❯ top-level-error.test.ts:1:7
      1| throw new Error('top level error')
       |       ^
      2| 

"
`;

exports[`correctly outputs all tests with args: "--browser.enabled" 1`] = `
"[chromium] basic.test.ts > basic suite > inner suite > some test
[chromium] basic.test.ts > basic suite > inner suite > another test
[chromium] basic.test.ts > basic suite > basic test
[chromium] basic.test.ts > outside test
[chromium] math.test.ts > 1 plus 1
[chromium] math.test.ts > failing test
"
`;

exports[`correctly outputs all tests with args: "--pool=forks" 1`] = `
"basic.test.ts > basic suite > inner suite > some test
basic.test.ts > basic suite > inner suite > another test
basic.test.ts > basic suite > basic test
basic.test.ts > outside test
math.test.ts > 1 plus 1
math.test.ts > failing test
"
`;

exports[`correctly outputs all tests with args: "--pool=threads" 1`] = `
"basic.test.ts > basic suite > inner suite > some test
basic.test.ts > basic suite > inner suite > another test
basic.test.ts > basic suite > basic test
basic.test.ts > outside test
math.test.ts > 1 plus 1
math.test.ts > failing test
"
`;

exports[`correctly outputs all tests with args: "--pool=vmForks" 1`] = `
"basic.test.ts > basic suite > inner suite > some test
basic.test.ts > basic suite > inner suite > another test
basic.test.ts > basic suite > basic test
basic.test.ts > outside test
math.test.ts > 1 plus 1
math.test.ts > failing test
"
`;

exports[`json output shows error 1`] = `
"Error: describe error
 ❯ describe-error.test.ts:4:9
      2| 
      3| describe('describe error', () => {
      4|   throw new Error('describe error')
       |         ^
      5| 
      6|   it('wont run', () => {

Error: top level error
 ❯ top-level-error.test.ts:1:7
      1| throw new Error('top level error')
       |       ^
      2| 

"
`;

exports[`json with a file output shows error 1`] = `
"Error: describe error
 ❯ describe-error.test.ts:4:9
      2| 
      3| describe('describe error', () => {
      4|   throw new Error('describe error')
       |         ^
      5| 
      6|   it('wont run', () => {

Error: top level error
 ❯ top-level-error.test.ts:1:7
      1| throw new Error('top level error')
       |       ^
      2| 

"
`;
